login/registration mobile design issue

--- a/src/Pages/authentication/css/auth.css
+++ b/src/Pages/authentication/css/auth.css
@@ -140,6 +140,7 @@ input[type="submit"]:hover {
 @media only screen and (max-width: 767px) {
   .initial-div {
     height: 80vh;
+    overflow: hidden;
   }
 
   .input-div {
